# allerfree

./: README.md  docker-compose.yml
language-model/: .dockerignore  .gitignore  Dockerfile  README.md  evaluate.ipynb  glu_and_shel_dat.pkl  italian_detection.pkl  main.ipynb  menu_dat.pkl  nut_glu_and_shel_dat.pkl  output.txt  pyproject.toml  shellfish_dat.pkl  test.ipynb  tlk_detection.pkl.pkl  tlk_menu.pkl  tlk_menu.pkl.pkl
language-model/allergy_detector/: __init__.py  detect.py
language-model/allergy_detector/detectors/: Detector.py  GeminiDetector.py  __init__.py
language-model/api/: main.py  mock.py
language-model/api/routers/: __init__.py  detect.py
language-model/common/client/: GoogleClients.py  __init__.py
language-model/common/custom_types/: ImageData.py  Menu.py  SupportedAllergen.py  __init__.py  from_string.py
language-model/common/log/: __init__.py  log.py
language-model/common/prompts/: __init__.py  detect_gluten.j2  detect_shellfish.j2  detect_tree_nuts.j2  make_prompt.py  prompt_construction_aid_1  prompt_construction_aid_2  structure_menu.j2
language-model/menu-reader/: ImageToTextParser.py  MenuStructurer.py  TextStructurer.py  main.ipynb  main.py
language-model/menu-reader/custom_types/: Menu.py  MenuItem.py  __init__.py
language-model/menu-reader/ocr/: __init__.py
language-model/menu-reader/prompts/: make_prompt.py  structure_menu.j2
language-model/menu-reader/sample/: ocr_reading.txt
language-model/menu_reader/: __init__.py  main.ipynb  read.py
language-model/test/: __init__.py
language-model/test/resources/: TLK.pkl  (+7 more)
(+133 files in other folders)
